Downgrade project's Java version to 17.0 (native for Ubuntu 24) and adjust tests